--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.13.5",
+    "@mui/x-date-pickers": "^6.8.0",
     "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
@@ -11,6 +15,7 @@
     "@types/react-dom": "^18.0.11",
     "aws-amplify": "^5.1.4",
     "axios": "^1.3.4",
+    "dayjs": "^1.11.8",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
